Upgrade project to Java 17 and fix code smells
ZENG-2517

Co-authored-by: Agata Ejfler <agata.ejfler@smartbear.com>